Formulator changes

  1.7.0
 
    Features Added

      - Added FormulatorFormFile, which can be used to load XML
        representations of forms from filesystem code like
        PageTemplateFile.

      - i18n-id and i18n-domain support for forms, except field items

    Bugs Fixed

      - changed way selection fields check whether their items
        property is a list or single item.

  1.6.2

    Bugs Fixed

      - Fixed bug which caused validation of listfields to throw an
        exception when a list of strings was used as the value of
        <items> and one of the elements was 2 characters long.

      - Formulator should now work again in Zope 2.7; Zope 2.7 has a
        change to the way it retrieved the character set it used to to
        display the ZMI. This interacted badly with the recent changes
        in Formulator to support unicode.

      - Added 'refresh.txt'. I don't consider it a bug if this doesn't
        work for you though -- I'm not using it. :)

      - XML representation of method-values attributes did not work.

      - python 2.1.3 compatibility: boolean values like "required"
        are translated to int on XML serializations/deserialization.

        The last two fixes are due to Sebastien Robin

      - render_hidden of DateTimeField's and fields allowing multiple
        selections did not lead to something useful for validation.

      - RadioField and ListField did not display the text but the value
        in render_view.

    Other

      - Whitespace normalization in sources.

  1.6.1

    Bugs Fixed

      - Adding Fields to empty Groups had not been possible.

      - ZMI "Order" tab of an empty form did raise an exception.

  1.6.0

    Features Added

      - FileSystemSite/DirectoryView improvements:

         * XML filesystem representation of Formulator forms can now
           also be used with CMF (if FileSystemSite is not installed).

         * FSForm gets automatically registered with the directory